package exercise.ex02.ex02_4;

public class PowerCommand {
}
